[package]
name = "regex-macro"
version = "0.1.1"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "A macro to generate a lazy Regex."
documentation = "https://docs.rs/regex-macro"
readme = "README.md"
homepage = "https://github.com/rossmacarthur/regex-macro"
repository = "https://github.com/rossmacarthur/regex-macro"
license = "MIT OR Apache-2.0"
include = ["src/lib.rs", "LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
regex = "1"
