[package]
name = "regex-macro"
version = "0.2.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "A macro to generate a lazy regex expression"
readme = "README.md"
repository = "https://github.com/rossmacarthur/regex-macro"
license = "MIT OR Apache-2.0"
keywords = ["regex", "macro", "lazy"]
categories = ["rust-patterns", "text-processing"]
include = ["src/lib.rs", "LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.0"
regex = "1.0"
